# dirigera-prometheus

./: .gitignore  Dockerfile  README.md
.github/workflows/: bandit.yml  dependency-review.yml  docker-publish.yml  hadolint.yml  pylint.yml  python-app.yml  scorecard.yml  sonarcloud.yml  trivy.yml
docker/: entrypoint.sh
src/: app.py  gunicorn.conf.py  pyproject.toml
