[tool.poetry]
name = "dirigera-prometheus-gateway"
version = "0.1.0"
description = "A Dirigera Gateway to expose metrics to Prometheus"
authors = ["Ajabep <ajabep@tutanota.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.0"
dirigera = "^1.2.1"
prometheus-client = "^0.21.1"
gunicorn = "^23.0.0"

[tool.pylint.main]
disable = ["line-too-long", "missing-function-docstring", "missing-class-docstring", "missing-module-docstring", "broad-exception-raised"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
